Update Makefile to accommmodate recent fortran-python change

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -6,7 +6,8 @@ OBJECT_FILES += external/fortran-python/sources/python.o
 OBJECT_FILES += external/fortran-xml/sources/xml.o
 OBJECT_FILES += external/fortran-xslt/sources/xslt.o
 OBJECT_FILES += sources/main.o sources/find_files.o
-LIBRARYS = -lgfortran -lexslt -lpython3.6m -lxml2 -lxslt
+LIBRARYS = -lgfortran -lexslt -lxml2 -lxslt
+LIBRARYS += $(shell pkg-config --libs python3)
 
 .PHONY: build clean run setup
 
@@ -14,6 +15,9 @@ build: setup ${PROGRAM}
 
 run: build
 	@${PROGRAM}
+
+external/%.o:
+	${MAKE} -C $(dir $@).. MODULES_DIR=$(abspath ${MODULES_DIR})
 
 %.o: %.f90
 	${CC} -pipe -Wall -J ${MODULES_DIR} -fbackslash -o $@ -c $^
