Extract render module

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,11 +1,11 @@
 PROGRAM = sources/generate
 MODULES_DIR = modules
-OBJECT_FILES += external/fortran-exslt/sources/exslt.o
-OBJECT_FILES += external/fortran-posix/sources/posix.o
-OBJECT_FILES += external/fortran-python/sources/python.o
-OBJECT_FILES += external/fortran-xml/sources/xml.o
-OBJECT_FILES += external/fortran-xslt/sources/xslt.o
-OBJECT_FILES += sources/sam.o sources/main.o sources/find_files.o
+OBJECTS += external/fortran-exslt/sources/exslt.o
+OBJECTS += external/fortran-posix/sources/posix.o
+OBJECTS += external/fortran-python/sources/python.o
+OBJECTS += external/fortran-xml/sources/xml.o
+OBJECTS += external/fortran-xslt/sources/xslt.o
+OBJECTS += sources/render.o sources/sam.o sources/find_files.o sources/main.o
 LIBRARYS = -lgfortran -lexslt -lxml2 -lxslt
 LIBRARYS += $(shell pkg-config --libs python3)
 
@@ -22,7 +22,7 @@ external/%.o:
 %.o: %.f90
 	${CC} -pipe -Wall -J ${MODULES_DIR} -fbackslash -o $@ -c $^
 
-${PROGRAM}: ${OBJECT_FILES}
+${PROGRAM}: ${OBJECTS}
 	${CC} -pipe -Wl,-s -o $@ $^ ${LIBRARYS}
 
 setup: ${MODULES_DIR}
@@ -31,4 +31,4 @@ ${MODULES_DIR}:
 	mkdir -p $@
 
 clean:
-	rm -rf ${PROGRAM} ${OBJECT_FILES} ${MODULES_DIR}
+	rm -rf ${PROGRAM} ${OBJECTS} ${MODULES_DIR}
