--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,14 +1,14 @@
 PROGRAM = sources/generate
 MODULES_DIR = modules
-OBJECTS += external/fortran-apr/sources/apr.o
 OBJECTS += external/fortran-exslt/sources/exslt.o
+OBJECTS += external/fortran-glib/sources/glib.o
 OBJECTS += external/fortran-posix/sources/posix.o
 OBJECTS += external/fortran-python/sources/python.o
 OBJECTS += external/fortran-xml/sources/xml.o
 OBJECTS += external/fortran-xslt/sources/xslt.o
 OBJECTS += sources/render.o sources/sam.o sources/main.o
 LIBRARYS = -lgfortran -lexslt -lxml2 -lxslt
-LIBRARYS += $(shell pkg-config --libs apr-1 python-3.6)
+LIBRARYS += $(shell pkg-config --libs glib-2.0 python-3.6)
 
 .PHONY: build clean setup
 
